--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
                 <div id="navbar-title">Connor Macdougall</div>
                 <div id="navbar-locators">
                     <a class="navbar-locator current-location" id="home-button">Home</a>
-                    <a class="navbar-locator" id="resume-button" href="/resume.html" onmouseenter="hyperlinkHandler('resume-button',1)" onmouseleave="hyperlinkHandler('resume-button',0)">Resume</a>
-                    <a class="navbar-locator" id="profile-button" href="/profile.html" onmouseenter="hyperlinkHandler('profile-button',1)" onmouseleave="hyperlinkHandler('profile-button',0)">Profile</a>
+                    <a class="navbar-locator" id="resume-button" href="resume.html" onmouseenter="hyperlinkHandler('resume-button',1)" onmouseleave="hyperlinkHandler('resume-button',0)">Resume</a>
+                    <a class="navbar-locator" id="profile-button" href="profile.html" onmouseenter="hyperlinkHandler('profile-button',1)" onmouseleave="hyperlinkHandler('profile-button',0)">Profile</a>
                 </div>
             </div>
         </nav>
@@ -27,27 +27,27 @@
     </section>
     <section id="slideshow">
             <div class="slideshow-display-container slideshow-right" id="slideshow-display-container-1" onclick="slideshowHandler(this.id)">
-                <img class="slideshow-image" id="slideshow-image-1"  src="/images/dolphin.jpg" alt="A dolphin underwater">
+                <img class="slideshow-image" id="slideshow-image-1"  src="dolphin.jpg" alt="A dolphin underwater">
                 <p class="slideshow-caption" id="slideshow-caption-1">A dolphin</p>
             </div>
             <div class="slideshow-display-container slideshow-far-right" id="slideshow-display-container-2" onclick="slideshowHandler(this.id)">
-                <img class="slideshow-image" id="slideshow-image-2"  src="/images/penguin.jpg" alt="A penguin underwater">
+                <img class="slideshow-image" id="slideshow-image-2"  src="penguin.jpg" alt="A penguin underwater">
                 <p class="slideshow-caption" id="slideshow-caption-2">A penguin</p>
             </div>
             <div class="slideshow-display-container slideshow-hidden" id="slideshow-display-container-3" onclick="slideshowHandler(this.id)">
-                <img class="slideshow-image" id="slideshow-image-3"  src="/images/ENG1013-project.jpg" alt="Breadboard used to house electronics coded in the ENG1013 team project">
+                <img class="slideshow-image" id="slideshow-image-3"  src="ENG1013-project.jpg" alt="Breadboard used to house electronics coded in the ENG1013 team project">
                 <p class="slideshow-caption" id="slideshow-caption-3">The breadboard used to house the electronics that I coded in the team project for ENG1013</p> 
             </div>            
             <div class="slideshow-display-container slideshow-far-left" id="slideshow-display-container-4" onclick="slideshowHandler(this.id)">
-                <img class="slideshow-image" id="slideshow-image-4"  src="/images/rabbit.jpg" alt="A rabbit in snowy background">
+                <img class="slideshow-image" id="slideshow-image-4"  src="rabbit.jpg" alt="A rabbit in snowy background">
                 <p class="slideshow-caption" id="slideshow-caption-4">A rabbit</p>
             </div>
             <div class="slideshow-display-container slideshow-left" id="slideshow-display-container-5" onclick="slideshowHandler(this.id)">
-                <img class="slideshow-image" id="slideshow-image-5"  src="/images/shark.jpg" alt="A shark underwater">
+                <img class="slideshow-image" id="slideshow-image-5"  src="shark.jpg" alt="A shark underwater">
                 <p class="slideshow-caption" id="slideshow-caption-5">A shark</p>
             </div>
             <div class="slideshow-display-container slideshow-centre" id="slideshow-display-container-6" onclick="slideshowHandler(this.id)">
-                <img class="slideshow-image" id="slideshow-image-6"  src="/images/Monash-logo.svg" alt="Monash University Logo">
+                <img class="slideshow-image" id="slideshow-image-6"  src="Monash-logo.svg" alt="Monash University Logo">
                 <p class="slideshow-caption" id="slideshow-caption-6">Logo of the university I am completing my degree at</p> 
             </div>
         <nav class="slideshow-navbar">
@@ -60,8 +60,8 @@
         </nav>
     </section>
     <footer>
-        <a id="contact-button" href="/profile.html" onmouseenter="hyperlinkHandler('contact-button',1)" onmouseleave="hyperlinkHandler('contact-button',0)">Contact Me</a>
-        <img id="footer-logo" src="/images/footer-logo.svg"></img>
+        <a id="contact-button" href="profile.html" onmouseenter="hyperlinkHandler('contact-button',1)" onmouseleave="hyperlinkHandler('contact-button',0)">Contact Me</a>
+        <img id="footer-logo" src="footer-logo.svg"></img>
         <div id="trademark-section"><span>&copy;</span> Connor Macdougall, 2022</div>
     </footer>
 </body>
