--- a/resume.html
+++ b/resume.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles.css">
-    <script defer src="/app.js"></script>
+    <link rel="stylesheet" href="styles.css">
+    <script defer src="app.js"></script>
     <title>Connor Macdougall - Resume</title>
 </head>
 <body id="background">
@@ -13,9 +13,9 @@
         <nav id="navbar">
                 <div id="navbar-title">Connor Macdougall</div>
                 <div id="navbar-locators">
-                    <a class="navbar-locator" id="home-button" href="/index.html" onmouseenter="hyperlinkHandler('home-button',1)" onmouseleave="hyperlinkHandler('home-button',0)">Home</a>
+                    <a class="navbar-locator" id="home-button" href="index.html" onmouseenter="hyperlinkHandler('home-button',1)" onmouseleave="hyperlinkHandler('home-button',0)">Home</a>
                     <a class="navbar-locator current-location" id="resume-button">Resume</a>
-                    <a class="navbar-locator" id="profile-button" href="/profile.html" onmouseenter="hyperlinkHandler('profile-button',1)" onmouseleave="hyperlinkHandler('profile-button',0)">Profile</a>
+                    <a class="navbar-locator" id="profile-button" href="profile.html" onmouseenter="hyperlinkHandler('profile-button',1)" onmouseleave="hyperlinkHandler('profile-button',0)">Profile</a>
                 </div>
             </div>
         </nav>
@@ -48,7 +48,7 @@
     <section class="experience-list-recent" id="experience-list">
         <div class="scroll-hidden experience" id="experience-4">
             <div class="experience-image-container">
-                <img class="experience-image" id="experience-image-4" src="/images/boosa-logo.png" alt="Logo of Boosa">
+                <img class="experience-image" id="experience-image-4" src="/resume/images/boosa-logo.png" alt="Logo of Boosa">
             </div>
             <div class="experience-text" id="experience-text-4">
                 <h3 class="experience-title" id="experience-title-4">Boosa - Kitchen Hand</h3>
@@ -64,7 +64,7 @@
         </div>
         <div class="scroll-hidden experience" id="experience-3">
             <div class="experience-image-container">
-                <img class="experience-image" id="experience-image-3" src="/images/Monash-logo.svg" alt="Logo of Monash University">
+                <img class="experience-image" id="experience-image-3" src="/resume/images/Monash-logo.svg" alt="Logo of Monash University">
             </div>
             <div class="experience-text" id="experience-text-3">
                 <h3 class="experience-title" id="experience-title-3">Monash University - Student</h3>
@@ -81,7 +81,7 @@
         </div>
         <div class="scroll-hidden experience" id="experience-2">
             <div class="experience-image-container">
-                <img class="experience-image" id="experience-image-2" src="/images/McDonalds-logo.jpg" alt="Image of the life-size Mcdonald's Logo present outside most McDonald's restaurants">
+                <img class="experience-image" id="experience-image-2" src="/resume/images/McDonalds-logo.jpg" alt="Image of the life-size Mcdonald's Logo present outside most McDonald's restaurants">
             </div>
             <div class="experience-text" id="experience-text-2">
                 <h3 class="experience-title" id="experience-title-2">McDonald's - Crew Member</h3>
@@ -97,7 +97,7 @@
         </div>
         <div class="scroll-hidden experience" id="experience-1">
             <div class="experience-image-container">
-                <img class="experience-image" id="experience-image-1" src="/images/Mck-sec-col.jpg" alt="Image of the front of McKinnon Secondary College">
+                <img class="experience-image" id="experience-image-1" src="/resume/images/Mck-sec-col.jpg" alt="Image of the front of McKinnon Secondary College">
                 <a href="#footnote-1" class="experience-image-reference" id="experience-image-reference-1">[1]</a>
             </div>
             <div class="experience-text" id="experience-text-1">
@@ -128,8 +128,8 @@
         <p id="footnote-1">[1] Image issued under a Creative Commons License, author: Celco85, image has not been altered, link: <a id="footnote-link-1" onmouseover="hyperlinkHandler('footnote-link-1',1)" onmouseleave="hyperlinkHandler('footnote-link-1',0)" href="https://commons.wikimedia.org/wiki/File:Mckinnoncollege.jpg" target="_blank">https://commons.wikimedia.org/wiki/File:Mckinnoncollege.jpg</a></p>
     </section>
     <footer id="resume-footer">
-        <a id="contact-button" href="/profile.html" onmouseenter="hyperlinkHandler('contact-button',1)" onmouseleave="hyperlinkHandler('contact-button',0)">Contact Me</a>
-        <img id="footer-logo" src="/images/footer-logo.svg"></img>
+        <a id="contact-button" href="profile.html" onmouseenter="hyperlinkHandler('contact-button',1)" onmouseleave="hyperlinkHandler('contact-button',0)">Contact Me</a>
+        <img id="footer-logo" src="/resume/images/footer-logo.svg"></img>
         <div id="trademark-section"><span>&copy;</span> Connor Macdougall, 2022</div>
     </footer>
 </body>
