--- a/profile.html
+++ b/profile.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles.css">
-    <script defer src="/app.js"></script>
+    <link rel="stylesheet" href="styles.css">
+    <script defer src="app.js"></script>
     <title>Connor Macdougall - Profile</title>
 </head>
 <body id="background">
@@ -13,8 +13,8 @@
         <nav id="navbar">
                 <div id="navbar-title">Connor Macdougall</div>
                 <div id="navbar-locators">
-                    <a class="navbar-locator" id="home-button" href="/index.html" onmouseenter="hyperlinkHandler('home-button',1)" onmouseleave="hyperlinkHandler('home-button',0)">Home</a>
-                    <a class="navbar-locator" id="resume-button" href="/resume.html"  onmouseenter="hyperlinkHandler('resume-button',1)" onmouseleave="hyperlinkHandler('resume-button',0)">Resume</a>
+                    <a class="navbar-locator" id="home-button" href="index.html" onmouseenter="hyperlinkHandler('home-button',1)" onmouseleave="hyperlinkHandler('home-button',0)">Home</a>
+                    <a class="navbar-locator" id="resume-button" href="resume.html"  onmouseenter="hyperlinkHandler('resume-button',1)" onmouseleave="hyperlinkHandler('resume-button',0)">Resume</a>
                     <a class="navbar-locator current-location" id="profile-button">Profile</a>
                 </div>
             </div>
@@ -41,11 +41,11 @@
         </section>
         <section id="contact-details">
             <div class="contact-option" id="contact-option-1">
-                <img class="contact-option-logo" id="contact-option-logo-1" src="/images/LinkedIn-logo.svg" alt="LinkedIn Logo">
+                <img class="contact-option-logo" id="contact-option-logo-1" src="/resume/images/LinkedIn-logo.svg" alt="LinkedIn Logo">
                 <a class="contact-option-link" id="contact-option-link-1">Coming Soon</a>
             </div>
             <div class="contact-option" id="contact-option-2">
-                <img class="contact-option-logo" id="contact-option-logo-2" src="/images/email-logo.png" alt="Email Logo">
+                <img class="contact-option-logo" id="contact-option-logo-2" src="/resume/images/email-logo.png" alt="Email Logo">
                 <a class="contact-option-link" id="contact-option-link-2">connoramacdougall@gmail.com</a>
             </div>
         </section>
@@ -62,7 +62,7 @@
     </section>
     <footer>
         <a href="#contact-details" id="contact-button" onmouseenter="hyperlinkHandler('contact-button',1)" onmouseleave="hyperlinkHandler('contact-button',0)">Contact Me</a>
-        <img id="footer-logo" src="/images/footer-logo.svg"></img>
+        <img id="footer-logo" src="/resume/images/footer-logo.svg"></img>
         <div id="trademark-section"><span>&copy;</span> Connor Macdougall, 2022</div>
     </footer>
 </body>
