--- a/profile.html
+++ b/profile.html
@@ -59,7 +59,7 @@
     <section id="about-website">
         About this website
         <p class="website-details">Last updated: 01/01/2023</p>
-        <p class="website-details">Access the official <a id="update-log-link" href="README.md" target="_blank">update log</a></p>
+        <p class="website-details">Access the official <a id="update-log-link" href="update-log.md" target="_blank">update log</a></p>
         <p class="website-details">First available online: 30/12/2022</p>
         <p class="website-details">This website was my first project, and is being continuously updated and improved. This website is hosted through a GitHub public repository.</p>
         <p class="website-details">Image information:
