--- a/profile.html
+++ b/profile.html
@@ -56,12 +56,36 @@
             </section>
         </section>
     </section>
+    <section id="animation-section">
+        <div id="animated-container" title="A calming animation done in CSS">
+            <div class="animated-block" id="animated-block-1"></div>
+            <div class="animated-block" id="animated-block-2"></div>
+            <div class="animated-block" id="animated-block-3"></div>
+            <div class="animated-block" id="animated-block-4"></div>
+            <div class="animated-block" id="animated-block-5"></div>
+            <div class="animated-block" id="animated-block-6"></div>
+            <div class="animated-block" id="animated-block-7"></div>
+            <div class="animated-block" id="animated-block-8"></div>
+            <div class="animated-block" id="animated-block-9"></div>
+            <div class="animated-block" id="animated-block-10"></div>
+            <div class="animated-block" id="animated-block-11"></div>
+            <div class="animated-block" id="animated-block-12"></div>
+            <div class="animated-block" id="animated-block-13"></div>
+            <div class="animated-block" id="animated-block-14"></div>
+            <div class="animated-block" id="animated-block-15"></div>
+            <div class="animated-block" id="animated-block-16"></div>
+            <div class="animated-block" id="animated-block-17"></div>
+            <div class="animated-block" id="animated-block-18"></div>
+            <div class="animated-block" id="animated-block-19"></div>
+            <div class="animated-block" id="animated-block-20"></div>
+        </div>
+    </section>
     <section id="about-website">
         About this website
         <p class="website-details">Last updated: 01/01/2023</p>
         <p class="website-details">Access the official <a id="update-log-link" href="update-log.md" target="_blank">update log</a></p>
         <p class="website-details">First available online: 30/12/2022</p>
-        <p class="website-details">This website was my first project, and is being continuously updated and improved. This website is hosted through a GitHub public repository.</p>
+        <p class="website-details">This website was my first project, and is being continuously updated and improved. This website is hosted through a GitHub public repository and is designed to work both on mobile phones and larger screens.</p>
         <p class="website-details">Image information:
             <li class="website-image-details">All are royalty free, or used under a Creative Commons License</li>
             <li class="website-image-details">Sources: Pixabay (unless otherwise specified)</li>
