Testing valid file routes to adjust to new domain

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <script defer src="app.js"></script>
-    <link rel="icon" type="image/png" href="/resume/images/favicon.png">
+    <link rel="icon" type="image/png" href="/images/favicon.png">
     <title>Connor Macdougall - Home</title>
 </head>
 <body id="background" onload="slideshowAutonomousHandler()">
@@ -30,11 +30,11 @@
     <h2 id="slideshow-title"><a href="projects.html">Projects</a> and <a href="resume.html">Experiences</a></h2>
     <section id="slideshow">
             <div class="slideshow-display-container slideshow-right" id="slideshow-display-container-1" onclick="slideshowHandler(this.id)">
-                <img class="slideshow-image" id="slideshow-image-1"  src="/resume/images/ENG1013-project.jpg" alt="Breadboard used to house electronics coded in the ENG1013 team project">
+                <img class="slideshow-image" id="slideshow-image-1"  src="/images/ENG1013-project.jpg" alt="Breadboard used to house electronics coded in the ENG1013 team project">
                 <p class="slideshow-caption" id="slideshow-caption-1">The breadboard used to house the electronics that I coded in the team project for ENG1013</p>
             </div>
             <div class="slideshow-display-container slideshow-far-right" id="slideshow-display-container-2" onclick="slideshowHandler(this.id)">
-                <img class="slideshow-image" id="slideshow-image-2"  src="/resume/images/resume-website-screenshot.png" alt="Screenshot of this website's resume webpage">
+                <img class="slideshow-image" id="slideshow-image-2"  src="resume-website-screenshot.png" alt="Screenshot of this website's resume webpage">
                 <p class="slideshow-caption" id="slideshow-caption-2">My first solo software project; this website!</p>
             </div>
             <div class="slideshow-display-container slideshow-hidden" id="slideshow-display-container-3" onclick="slideshowHandler(this.id)">
