--- a/index.html
+++ b/index.html
@@ -34,23 +34,23 @@
                 <p class="slideshow-caption" id="slideshow-caption-1">The breadboard used to house the electronics that I coded in the team project for ENG1013</p>
             </div>
             <div class="slideshow-display-container slideshow-far-right" id="slideshow-display-container-2" onclick="slideshowHandler(this.id)">
-                <img class="slideshow-image" id="slideshow-image-2"  src="resume-website-screenshot.png" alt="Screenshot of this website's resume webpage">
+                <img class="slideshow-image" id="slideshow-image-2"  src="/images/resume-website-screenshot.png" alt="Screenshot of this website's resume webpage">
                 <p class="slideshow-caption" id="slideshow-caption-2">My first solo software project; this website!</p>
             </div>
             <div class="slideshow-display-container slideshow-hidden" id="slideshow-display-container-3" onclick="slideshowHandler(this.id)">
-                <img class="slideshow-image" id="slideshow-image-3"  src="/resume/images/Mck-sec-col.jpg" alt="The front of Mckinnon Secondary College seen from the roadside">
+                <img class="slideshow-image" id="slideshow-image-3"  src="/images/Mck-sec-col.jpg" alt="The front of Mckinnon Secondary College seen from the roadside">
                 <p class="slideshow-caption" id="slideshow-caption-3">Where I completed VCE</p> 
             </div>            
             <div class="slideshow-display-container slideshow-far-left" id="slideshow-display-container-4" onclick="slideshowHandler(this.id)">
-                <img class="slideshow-image" id="slideshow-image-4"  src="/resume/images/McDonalds-logo.jpg" alt="The life-size Mcdonald's Logo present outside most McDonald's restaurants">
+                <img class="slideshow-image" id="slideshow-image-4"  src="/images/McDonalds-logo.jpg" alt="The life-size Mcdonald's Logo present outside most McDonald's restaurants">
                 <p class="slideshow-caption" id="slideshow-caption-4">I worked as a team member at McDonalds</p>
             </div>
             <div class="slideshow-display-container slideshow-left" id="slideshow-display-container-5" onclick="slideshowHandler(this.id)">
-                <img class="slideshow-image" id="slideshow-image-5"  src="/resume/images/boosa-logo.png" alt="Logo of Boosa">
+                <img class="slideshow-image" id="slideshow-image-5"  src="/images/boosa-logo.png" alt="Logo of Boosa">
                 <p class="slideshow-caption" id="slideshow-caption-5">I worked as a kitchen hand at Boosa</p>
             </div>
             <div class="slideshow-display-container slideshow-centre" id="slideshow-display-container-6" onclick="slideshowHandler(this.id)">
-                <img class="slideshow-image" id="slideshow-image-6"  src="/resume/images/Monash-logo.svg" alt="Monash University Logo">
+                <img class="slideshow-image" id="slideshow-image-6"  src="/images/Monash-logo.svg" alt="Monash University Logo">
                 <p class="slideshow-caption" id="slideshow-caption-6">The university I am completing my degree at</p> 
             </div>
         <nav class="slideshow-navbar">
@@ -64,7 +64,7 @@
     </section>
     <footer>
         <a id="contact-button" href="profile.html">Contact Me</a>
-        <img id="footer-logo" src="/resume/images/footer-logo.svg"></img>
+        <img id="footer-logo" src="/images/footer-logo.svg"></img>
         <div id="trademark-section"><span>&copy;</span> Connor Macdougall, 2022</div>
     </footer>
 </body>
