--- a/profile.html
+++ b/profile.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <script defer src="app.js"></script>
-    <link rel="icon" type="image/png" href="/resume/images/favicon.png">
+    <link rel="icon" type="image/png" href="/images/favicon.png">
     <title>Connor Macdougall - Profile</title>
 </head>
 <body id="background">
@@ -42,43 +42,19 @@
             </div>
             <section id="contact-details">Contact me
                 <div class="contact-option" id="contact-option-1">
-                    <img class="contact-option-logo" id="contact-option-logo-1" src="/resume/images/LinkedIn-logo.svg" alt="LinkedIn Logo">
+                    <img class="contact-option-logo" id="contact-option-logo-1" src="/images/LinkedIn-logo.svg" alt="LinkedIn Logo">
                     <a class="contact-option-link" id="contact-option-link-1">Coming Soon</a>
                 </div>
                 <div class="contact-option" id="contact-option-2">
-                    <img class="contact-option-logo" id="contact-option-logo-2" src="/resume/images/email-logo.png" alt="Email Logo">
+                    <img class="contact-option-logo" id="contact-option-logo-2" src="/images/email-logo.png" alt="Email Logo">
                     <a class="contact-option-link" id="contact-option-link-2">connoramacdougall@gmail.com</a>
                 </div>
                 <div class="contact-option" id="contact-option-3">
-                    <img class="contact-option-logo" id="contact-option-logo-3" src="/resume/images/GitHub-logo.png" alt="GitHub Logo">
+                    <img class="contact-option-logo" id="contact-option-logo-3" src="/images/GitHub-logo.png" alt="GitHub Logo">
                     <a href="https://github.com/Connor2023" target="_blank" class="contact-option-link" id="contact-option-link-3">Connor2023</a>
                 </div>
             </section>
         </section>
-    </section>
-    <section id="animation-section">
-        <div id="animated-container" title="A calming animation done in CSS">
-            <div class="animated-block" id="animated-block-1"></div>
-            <div class="animated-block" id="animated-block-2"></div>
-            <div class="animated-block" id="animated-block-3"></div>
-            <div class="animated-block" id="animated-block-4"></div>
-            <div class="animated-block" id="animated-block-5"></div>
-            <div class="animated-block" id="animated-block-6"></div>
-            <div class="animated-block" id="animated-block-7"></div>
-            <div class="animated-block" id="animated-block-8"></div>
-            <div class="animated-block" id="animated-block-9"></div>
-            <div class="animated-block" id="animated-block-10"></div>
-            <div class="animated-block" id="animated-block-11"></div>
-            <div class="animated-block" id="animated-block-12"></div>
-            <div class="animated-block" id="animated-block-13"></div>
-            <div class="animated-block" id="animated-block-14"></div>
-            <div class="animated-block" id="animated-block-15"></div>
-            <div class="animated-block" id="animated-block-16"></div>
-            <div class="animated-block" id="animated-block-17"></div>
-            <div class="animated-block" id="animated-block-18"></div>
-            <div class="animated-block" id="animated-block-19"></div>
-            <div class="animated-block" id="animated-block-20"></div>
-        </div>
     </section>
     <section id="about-website">
         About this website
@@ -93,7 +69,7 @@
     </section>
     <footer>
         <a href="#contact-details" id="contact-button">Contact Me</a>
-        <img id="footer-logo" src="/resume/images/footer-logo.svg"></img>
+        <img id="footer-logo" src="/images/footer-logo.svg"></img>
         <div id="trademark-section"><span>&copy;</span> Connor Macdougall, 2022</div>
     </footer>
 </body>
