Full update to fix domain transfer issues
Also removed defunct project used to check filters were working correctly

--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <script defer src="app.js"></script>
-    <link rel="icon" type="image/png" href="/resume/images/favicon.png">
+    <link rel="icon" type="image/png" href="/images/favicon.png">
     <title>Connor Macdougall - Projects</title>
 </head>
 <body id="background">
@@ -46,28 +46,15 @@
         </section>
     </div>
     <section class="project-list-latest" id="project-list">
-        <!-- <div class="scroll-hidden project team-project js" id="project-2">
-            <div class="project-image-container">
-                <img class="project-image" id="project-image-2" src="/resume/images/resume-website-screenshot.png" alt="Screenshot of this website's resume webpage">
-            </div>
-            <div class="project-text" id="project-text-2">Team
-                <h3 class="project-title" id="project-title-2">Group Website</h3>
-                <div class="project-subtitle" id="project-subtitle-2">January 2023</div>
-                <div class="project-filters" id="project-filters-2">Categories:
-                    <div class="project-filter js-filter">JavaScript</div>
-                </div>
-                <li class="project-explanation">I did the JavaScript code for this website</li>
-            </div>
-        </div> -->
         <div class="scroll-hidden project individual-project html css js" id="project-1">
             <div class="project-image-container">
-                <img class="project-image" id="project-image-1" src="/resume/images/resume-website-screenshot.png" alt="Screenshot of this website's resume webpage">
+                <img class="project-image" id="project-image-1" src="/images/resume-website-screenshot.png" alt="Screenshot of this website's resume webpage">
             </div>
             <div class="project-text" id="project-text-1">Individual
                 <div class="project-title-and-link" id="project-title-and-link-1">
                     <h3 class="project-title" id="project-title-1">Personal Website</h3>
                     <a href="https://github.com/Connor2023/resume" target="_blank" title="Open GitHub Repository">
-                        <img src="/resume/images/box.png" alt="An opened box" class="project-link" id="project-link-1">
+                        <img src="/images/box.png" alt="An opened box" class="project-link" id="project-link-1">
                     </a>
                 </div>
                 <div class="project-subtitle" id="project-subtitle-1">December 2022 - Present</div>
@@ -86,7 +73,7 @@
     </section>
     <footer id="projects-footer">
         <a id="contact-button" href="profile.html">Contact Me</a>
-        <img id="footer-logo" src="/resume/images/footer-logo.svg"></img>
+        <img id="footer-logo" src="/images/footer-logo.svg"></img>
         <div id="trademark-section"><span>&copy;</span> Connor Macdougall, 2022</div>
     </footer>
 </body>
