Full update to fix domain transfer issues

--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <script defer src="app.js"></script>
-    <link rel="icon" type="image/png" href="/resume/images/favicon.png">
+    <link rel="icon" type="image/png" href="/images/favicon.png">
     <title>Connor Macdougall - Resume</title>
 </head>
 <body id="background">
@@ -49,7 +49,7 @@
     <section class="experience-list-latest" id="experience-list">
         <div class="scroll-hidden experience major-experience software education teamwork" id="experience-3">
             <div class="experience-image-container">
-                <img class="experience-image" id="experience-image-3" src="/resume/images/Monash-logo.svg" alt="Logo of Monash University">
+                <img class="experience-image" id="experience-image-3" src="/images/Monash-logo.svg" alt="Logo of Monash University">
             </div>
             <div class="experience-text" id="experience-text-3">
                 <h3 class="experience-title" id="experience-title-3">Monash University - Student</h3>
@@ -66,7 +66,7 @@
         </div>
         <div class="scroll-hidden experience major-experience hospitality teamwork" id="experience-4">
             <div class="experience-image-container">
-                <img class="experience-image" id="experience-image-4" src="/resume/images/boosa-logo.png" alt="Logo of Boosa">
+                <img class="experience-image" id="experience-image-4" src="/images/boosa-logo.png" alt="Logo of Boosa">
             </div>
             <div class="experience-text" id="experience-text-4">
                 <h3 class="experience-title" id="experience-title-4">Boosa - Kitchen Hand</h3>
@@ -82,7 +82,7 @@
         </div>
         <div class="scroll-hidden experience major-experience hospitality teamwork" id="experience-2">
             <div class="experience-image-container">
-                <img class="experience-image" id="experience-image-2" src="/resume/images/McDonalds-logo.jpg" alt="The life-size Mcdonald's Logo present outside most McDonald's restaurants">
+                <img class="experience-image" id="experience-image-2" src="/images/McDonalds-logo.jpg" alt="The life-size Mcdonald's Logo present outside most McDonald's restaurants">
             </div>
             <div class="experience-text" id="experience-text-2">
                 <h3 class="experience-title" id="experience-title-2">McDonald's - Crew Member</h3>
@@ -98,7 +98,7 @@
         </div>
         <div class="scroll-hidden experience major-experience software education community" id="experience-1">
             <div class="experience-image-container">
-                <img class="experience-image" id="experience-image-1" src="/resume/images/Mck-sec-col.jpg" alt="The front of Mckinnon Secondary College seen from the roadside">
+                <img class="experience-image" id="experience-image-1" src="/images/Mck-sec-col.jpg" alt="The front of Mckinnon Secondary College seen from the roadside">
                 <a href="#footnote-1" class="experience-image-reference" id="experience-image-reference-1">[1]</a>
             </div>
             <div class="experience-text" id="experience-text-1">
@@ -130,7 +130,7 @@
     </section>
     <footer id="resume-footer">
         <a id="contact-button" href="profile.html">Contact Me</a>
-        <img id="footer-logo" src="/resume/images/footer-logo.svg"></img>
+        <img id="footer-logo" src="/images/footer-logo.svg"></img>
         <div id="trademark-section"><span>&copy;</span> Connor Macdougall, 2022</div>
     </footer>
 </body>
