Adjusted for altered CSS specifiers

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <link rel="icon" type="image/png" href="/images/favicon.png">
     <title>Connor Macdougall - Home</title>
 </head>
-<body id="background" onload="slideshowAutonomousHandler()">
-    <header id="header">
-        <nav id="navbar">
-                <div id="navbar-title">Connor Macdougall</div>
-                <div id="navbar-locators">
+<body onload="slideshowAutonomousHandler()">
+    <header class="header">
+        <nav class="navbar">
+                <div class="navbar-title">Connor Macdougall</div>
+                <div class="navbar-locators">
                     <a class="navbar-locator current-location" id="home-button">Home</a>
                     <a class="navbar-locator not-current-location" id="resume-button" href="resume.html">Resume</a>
                     <a class="navbar-locator not-current-location" id="projects-button" href="projects.html">Projects</a>
@@ -63,7 +63,7 @@
         </nav>
     </section>
     <footer>
-        <a id="contact-button" href="profile.html">Contact Me</a>
+        <a class="contact-button" href="profile.html">Contact Me</a>
         <img id="footer-logo" src="/images/footer-logo.svg"></img>
         <div id="trademark-section"><span>&copy;</span> Connor Macdougall, 2022</div>
     </footer>
