Adjusted for altered CSS specifiers
html elements in the navbar had their 'class'es changed to become 'id's

--- a/profile.html
+++ b/profile.html
@@ -9,11 +9,11 @@
     <link rel="icon" type="image/png" href="/images/favicon.png">
     <title>Connor Macdougall - Profile</title>
 </head>
-<body id="background">
-    <header id="header">
-        <nav id="navbar">
-                <div id="navbar-title">Connor Macdougall</div>
-                <div id="navbar-locators">
+<body>
+    <header class="header">
+        <nav class="navbar">
+                <div class="navbar-title">Connor Macdougall</div>
+                <div class="navbar-locators">
                     <a class="navbar-locator not-current-location" id="home-button" href="index.html">Home</a>
                     <a class="navbar-locator not-current-location" id="resume-button" href="resume.html">Resume</a>
                     <a class="navbar-locator not-current-location" id="projects-button" href="projects.html">Projects</a>
@@ -58,7 +58,7 @@
     </section>
     <section id="about-website">
         About this website
-        <p class="website-details">Last updated: 01/01/2023</p>
+        <p class="website-details">Last updated: 16/01/2023</p>
         <p class="website-details">Access the official <a id="update-log-link" href="update-log.md" target="_blank">update log</a></p>
         <p class="website-details">First available online: 30/12/2022</p>
         <p class="website-details">This website was my first project, and is being continuously updated and improved. This website is hosted through a GitHub public repository and is designed to work both on mobile phones and larger screens.</p>
@@ -68,7 +68,7 @@
         </p>
     </section>
     <footer>
-        <a href="#contact-details" id="contact-button">Contact Me</a>
+        <a href="#contact-details" class="contact-button" title="See the blue box on this page">Contact Me</a>
         <img id="footer-logo" src="/images/footer-logo.svg"></img>
         <div id="trademark-section"><span>&copy;</span> Connor Macdougall, 2022</div>
     </footer>
