--- a/projects.html
+++ b/projects.html
@@ -9,11 +9,11 @@
     <link rel="icon" type="image/png" href="/images/favicon.png">
     <title>Connor Macdougall - Projects</title>
 </head>
-<body id="background">
-    <header id="header">
-        <nav id="navbar">
-                <div id="navbar-title">Connor Macdougall</div>
-                <div id="navbar-locators">
+<body>
+    <header class="header">
+        <nav class="navbar">
+                <div class="navbar-title">Connor Macdougall</div>
+                <div class="navbar-locators">
                     <a class="navbar-locator not-current-location" id="home-button" href="index.html">Home</a>
                     <a class="navbar-locator not-current-location" id="resume-button" href="resume.html">Resume</a>
                     <a class="navbar-locator current-location" id="projects-button">Projects</a>
@@ -23,7 +23,8 @@
         </nav>
     </header>
     <div class="scroll-hidden" id="projects-introduction-text-grid">
-        <h1 id="projects-introduction-text">Working in a Team <em>and</em>&nbsp; Individually.</h1></div>
+        <h1 id="projects-introduction-text">Working in a Team <em>and</em>&nbsp; Individually.</h1>
+    </div>
     <div class="scroll-hidden" id="projects-options">
         <section id="projects-filters">
             <h2 id="filter-title">Filters</h2>
@@ -72,7 +73,7 @@
     <section id="footnotes">Please note: The date at which the project began is the date upon which the projects are ordered by.
     </section>
     <footer id="projects-footer">
-        <a id="contact-button" href="profile.html">Contact Me</a>
+        <a class="contact-button" href="profile.html">Contact Me</a>
         <img id="footer-logo" src="/images/footer-logo.svg"></img>
         <div id="trademark-section"><span>&copy;</span> Connor Macdougall, 2022</div>
     </footer>
