Adjusted for altered CSS specifiers

--- a/resume.html
+++ b/resume.html
@@ -9,11 +9,11 @@
     <link rel="icon" type="image/png" href="/images/favicon.png">
     <title>Connor Macdougall - Resume</title>
 </head>
-<body id="background">
-    <header id="header">
-        <nav id="navbar">
-                <div id="navbar-title">Connor Macdougall</div>
-                <div id="navbar-locators">
+<body>
+    <header class="header">
+        <nav class="navbar">
+                <div class="navbar-title">Connor Macdougall</div>
+                <div class="navbar-locators">
                     <a class="navbar-locator not-current-location" id="home-button" href="index.html">Home</a>
                     <a class="navbar-locator current-location" id="resume-button">Resume</a>
                     <a class="navbar-locator not-current-location" id="projects-button" href="projects.html">Projects</a>
@@ -129,7 +129,7 @@
         <p id="footnote-1">[1] Image issued under a Creative Commons License, author: Celco85, image has not been altered, link: <a id="footnote-link-1" href="https://commons.wikimedia.org/wiki/File:Mckinnoncollege.jpg" target="_blank">https://commons.wikimedia.org/wiki/File:Mckinnoncollege.jpg</a></p>
     </section>
     <footer id="resume-footer">
-        <a id="contact-button" href="profile.html">Contact Me</a>
+        <a class="contact-button" href="profile.html">Contact Me</a>
         <img id="footer-logo" src="/images/footer-logo.svg"></img>
         <div id="trademark-section"><span>&copy;</span> Connor Macdougall, 2022</div>
     </footer>
