Added 'RSA Certificate' minor experience

--- a/resume.html
+++ b/resume.html
@@ -64,6 +64,16 @@
                 <li class="experience-explanation">Learnt the foundations of each specialisation to streamline multidisciplinary teamwork</li>
             </div>
         </div>
+        <div class="scroll-hidden experience minor-experience hospitality" id="minor-experience-2">
+            <div class="minor-experience-headings" id="minor-experience-headings-2">
+                <h4 class="minor-experience-title" id="minor-experience-title-2">RSA Certificate</h4>
+                <div class="minor-experience-subtitle" id="minor-experience-subtitle-2">Online, January 2023</div>
+                <div class="minor-experience-filters" id="minor-experience-filters-2">Categories:
+                    <div class="minor-experience-filter hospitality-filter">Hospitality</div>
+                </div>
+            </div>
+            <li class="minor-experience-explanation">Obtained a RSA certificate, and learnt the importance of harm-minimisation and preventing intoxication</li>
+        </div>
         <div class="scroll-hidden experience major-experience hospitality teamwork" id="experience-4">
             <div class="experience-image-container">
                 <img class="experience-image" id="experience-image-4" src="/images/boosa-logo.png" alt="Logo of Boosa">
@@ -124,6 +134,7 @@
                 </div>
             </div>
             <li class="minor-experience-explanation">Helped building teamwork skills, and the importance of discipline surrounding training and when recovering from a season-ending ankle injury</li>
+        </div>
     </section>
     <section id="footnotes">Please note: The date at which the experience was completed is the date upon which the experiences are ordered by.
         <p id="footnote-1">[1] Image issued under a Creative Commons License, author: Celco85, image has not been altered, link: <a id="footnote-link-1" href="https://commons.wikimedia.org/wiki/File:Mckinnoncollege.jpg" target="_blank">https://commons.wikimedia.org/wiki/File:Mckinnoncollege.jpg</a></p>
