--- a/index.html
+++ b/index.html
@@ -39,19 +39,19 @@
             </div>
             <div class="slideshow-display-container slideshow-hidden" id="slideshow-display-container-3" onclick="slideshowHandler(this.id)">
                 <img class="slideshow-image" id="slideshow-image-3"  src="/images/Mck-sec-col.jpg" alt="The front of Mckinnon Secondary College seen from the roadside">
-                <p class="slideshow-caption" id="slideshow-caption-3">Where I completed VCE</p> 
+                <p class="slideshow-caption" id="slideshow-caption-3">McKinnon Secondary College; the secondary school I completed VCE</p> 
             </div>            
             <div class="slideshow-display-container slideshow-far-left" id="slideshow-display-container-4" onclick="slideshowHandler(this.id)">
                 <img class="slideshow-image" id="slideshow-image-4"  src="/images/McDonalds-logo.jpg" alt="The life-size Mcdonald's Logo present outside most McDonald's restaurants">
-                <p class="slideshow-caption" id="slideshow-caption-4">I worked as a team member at McDonalds</p>
+                <p class="slideshow-caption" id="slideshow-caption-4">I worked as a team member at McDonalds as my first job</p>
             </div>
             <div class="slideshow-display-container slideshow-left" id="slideshow-display-container-5" onclick="slideshowHandler(this.id)">
-                <img class="slideshow-image" id="slideshow-image-5"  src="/images/boosa-logo.png" alt="Logo of Boosa">
-                <p class="slideshow-caption" id="slideshow-caption-5">I worked as a kitchen hand at Boosa</p>
+                <img class="slideshow-image" id="slideshow-image-5"  src="/images/RSA-training-logo.png" alt="Logo of RSA Nationally Recognised Training">
+                <p class="slideshow-caption" id="slideshow-caption-5">I obtained my RSA certificate in January 2023</p>
             </div>
             <div class="slideshow-display-container slideshow-centre" id="slideshow-display-container-6" onclick="slideshowHandler(this.id)">
                 <img class="slideshow-image" id="slideshow-image-6"  src="/images/Monash-logo.svg" alt="Monash University Logo">
-                <p class="slideshow-caption" id="slideshow-caption-6">The university I am completing my degree at</p> 
+                <p class="slideshow-caption" id="slideshow-caption-6">Monash University; the university I am completing my degree at</p> 
             </div>
         <nav class="slideshow-navbar">
             <div class="slideshow-locator active-slideshow-locator" id="slideshow-locator-1" onclick="slideshowHandler(this.id)"></div>
