Altered for modified CSS to save space

--- a/profile.html
+++ b/profile.html
@@ -63,8 +63,8 @@
         <p class="website-details">First available online: 30/12/2022</p>
         <p class="website-details">This website was my first project, and is being continuously updated and improved. This website is hosted through a GitHub public repository and is designed to work both on mobile phones and larger screens.</p>
         <p class="website-details">Image information:
-            <li class="website-image-details">All are royalty free, or used under a Creative Commons License</li>
-            <li class="website-image-details">Sources: Pixabay (unless otherwise specified)</li>
+            <li class="website-details website-image-details">All are royalty free, or used under a Creative Commons License</li>
+            <li class="website-details website-image-details">Sources: Pixabay (unless otherwise specified)</li>
         </p>
     </section>
     <footer>
