Changed content of 'welcome-introduction-text' element

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     </header>
     <section id="welcome">
         <h1 id="welcome-header">Welcome!</h1>
-        <p class="introduction-text" id="welcome-introduction-text">Welcome to my website, my first software project which has also become a compilation of all my other experiences, to demonstrate my capabilities. 
-            Attempted over the summer of '22-'23, this website was my beginning to coding after I was introduced to it in ENG1013, a first year engineering unit at Monash University. </p>
+        <p class="introduction-text" id="welcome-introduction-text">Welcome to my website, my first software project which is also a compilation of all my other experiences. 
+            Beginning in the summer of '22-'23, this website was my start to coding after I was introduced to it in ENG1013, a first year engineering unit at Monash University. </p>
     </section>
     <h2 id="slideshow-title"><a href="projects.html">Projects</a> and <a href="resume.html">Experiences</a></h2>
     <section id="slideshow">
